<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fourth">

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="20dp"
        android:text="@string/div"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName15"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:text="@string/one_four" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center|left"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="@string/four_seven"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName16"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/three" />

    <Button
        android:id="@+id/button35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="310dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mul"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/add"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/sub"
        android:textSize="18sp" />

</FrameLayout>