<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third">

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="310dp"
        android:width="187dp"
        android:height="187dp"
        android:text="@string/div"
        android:textSize="72sp" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="125dp"
        android:width="187dp"
        android:height="187dp"
        android:text="@string/sub"
        android:textSize="72sp" />

    <EditText
        android:id="@+id/editTextTextPersonName17"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/one_four" />

    <EditText
        android:id="@+id/editTextTextPersonName18"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/three" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp"
        android:text="@string/four_seven"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="310dp"
        android:layout_marginRight="15dp"
        android:width="187dp"
        android:height="187dp"
        android:text="@string/mul"
        android:textSize="72sp" />

    <Button
        android:id="@+id/button26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="125dp"
        android:layout_marginRight="15dp"
        android:width="187dp"
        android:height="187dp"
        android:text="@string/add"
        android:textSize="72sp" />

</FrameLayout>